Firefox web based stub installer window jumps when dragged to the edge of the screen while installation is in progress
Categories
(Firefox :: Installer, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr68 | --- | unaffected |
| firefox75 | --- | unaffected |
| firefox76 | --- | unaffected |
| firefox77 | --- | verified |
People
(Reporter: atrif, Assigned: agashlin)
References
(Blocks 1 open bug, Regression)
Details
(Keywords: regression)
Attachments
(3 files)
Affected versions
- 77.0a1 (20200422214848)
Affected platforms
- Windows 10 x64
Steps to reproduce
- Download and run Firefox Installer.
- Move the installer window on the edge of the screen while the installation is in progress.
Expected result
- No glitches are presented.
Actual result
- Firefox web based stub installer window jumps.
Regression Range
- I will search for one ASAP if there is one.
Notes
- Attached a screen recording.
- The issue is not reproducible on the reinstall window.
- L.E.: This also happens when slowly moving the installer window across two monitors.
| Reporter | ||
Comment 1•6 years ago
|
||
Attaching the regression range:
Last good revision: 272e82616218411bfb0b89ef7c710cd65830ece1 (2020-04-20)
First bad revision: 2fd61eb5c69ce9ac806048a35c7a7a88bf4b9652 (2020-04-21)
Pushlog:
https://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=272e82616218411bfb0b89ef7c710cd65830ece1&tochange=2fd61eb5c69ce9ac806048a35c7a7a88bf4b9652
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 2•6 years ago
|
||
Turns out this results from passing our parent window into ExecuteCodeSegment. I had thought that was what that arg was for, but it turns out it's actually supposed to take a handle to a progress bar, so it can send it PBM_SETPOS (NSIS updates its standard progress bar depending on the progress through the install script). So it makes sense that this is doing something unwanted to our window, probably resetting its size which might cause it to clamp back onscreen. Passing nullptr instead solves this issue.
| Assignee | ||
Comment 3•6 years ago
|
||
| Assignee | ||
Comment 4•6 years ago
|
||
Depends on D72993
Updated•6 years ago
|
Comment 6•6 years ago
|
||
| bugherder | ||
https://hg.mozilla.org/mozilla-central/rev/9d8d97cc7797
https://hg.mozilla.org/mozilla-central/rev/a679259cce36
| Reporter | ||
Comment 7•6 years ago
|
||
Verified the issue using the latest Firefox 77.0a1 (03-May-2020) installer on Windows 10x64 and Windows7x64. The window no longer jumps when being dragged at the edge of the screen while the installation is running.
Description
•