Bug 1632463 - Part 1: Pass no window to ExecuteCodeSegment. r=mhowell

The second argument to `ExecuteCodeSegment` is for a progress bar, not the parent window.

Differential Revision: https://phabricator.services.mozilla.com/D72993